--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,13 @@ resources/models/emotion_text_classifier*
 resources/models/grammar*
 resources/models/llm*
 resources/models/spacy*
-#resources/models/styletts2/*
+resources/models/styletts2/Models/*
 resources/models/whisper*
 #resources/StyleTTS2*
+#resources/models*
 
 # exclude workspace files
 resources/downloads*
-resources/models*
 resources/temp*
 
 # exclude gardio files
