--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,6 @@ transformer-utils = "^0.1.1"
 diffusers = {extras = ["torch"], version = "^0.25.1"}
 sentence-transformers = "^2.2.2"
 transformers = "^4.37.0"
-llama-cpp-python = "^0.2.32"
 soundfile = "^0.12.1"
 munch = "^4.0.0"
 pydub = "^0.25.1"
@@ -67,6 +66,7 @@ html2text = "^2020.1.16"
 markdown = "^3.5.2"
 pymupdf = "^1.23.17"
 docx2txt = "^0.8"
+cleantext = "^1.1.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
