--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ pymupdf = "^1.23.17"
 docx2txt = "^0.8"
 cleantext = "^1.1.4"
 sentencepiece = "^0.2.0"
+ollama = "^0.1.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
