--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ cleantext = "^1.1.4"
 sentencepiece = "^0.2.0"
 ollama = "^0.1.6"
 chatlab = "1.3.0"
+sniffio = "^1.3.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
