--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 rich = "^13.7.0"
-gradio = "^4.15.0"
+gradio = "4.7.1"
 torch = {version = "^2.1.2+cu118", source = "pytorch"}
 torchvision = {version = "^0.16.2+cu118", source = "pytorch"}
 torchaudio = {version = "^2.1.2+cu118", source = "pytorch"}
@@ -68,6 +68,7 @@ sentencepiece = "^0.2.0"
 ollama = "^0.1.6"
 chatlab = "1.3.0"
 sniffio = "^1.3.1"
+anyio = "^4.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
